# korg

./: .gitignore  ANNOUNCEMENT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  INSTALLATION_GUIDE.md  Index.md  Korg - Queries.md  POLICY.md  PRODUCT_OVERVIEW.md  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  _GROK.md  agent_event_spec.md  demo-sim.sh  demo.tape  deploy.sh  implementation_plan.md  korg.toml  llms.txt  log.md  mcp.json  mcp_server.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  goldseal-demo.yml  korgcert-demo.yml  pages.yml  (+1 more)
.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
Architecture/: Overview.md
Decisions/: 0001 - Project Kickoff.md
Prompts/: benjamin.md  captain.md  evaluator.md  harper.md  lucas.md
Tests/: test_mcp_server.py
adapters/: PUBLISHING.md
adapters/claude-code/: README.md  pyproject.toml
adapters/claude-code/src/claude_code_adapter/: __init__.py  __main__.py  adapter.py  backfill.py  backfill_cli.py  canonical_emit.py  hook.py  migrate.py  parser.py  tail.py
adapters/claude-code/tests/: test_backfill.py  test_canonical_emit.py  test_claude_code_adapter.py  test_hook.py  test_migrate.py  test_tail.py
adapters/claude-code/tests/fixtures/: simple_session.jsonl
adapters/codex-ws/: README.md  pyproject.toml
adapters/codex-ws/src/codex_adapter/: __init__.py  adapter.py  parser.py
adapters/codex-ws/tests/: test_codex_adapter.py
adapters/codex-ws/tests/fixtures/: simple_session.json
adapters/grok-heavy/: README.md  pyproject.toml
adapters/grok-heavy/src/grok_heavy_adapter/: __init__.py  adapter.py  parser.py
adapters/grok-heavy/tests/: test_grok_heavy_adapter.py
adapters/grok-heavy/tests/fixtures/: three_agent_session.ndjson
adapters/introspect-mcp/: README.md  pyproject.toml
adapters/introspect-mcp/src/korg_introspect_mcp/: __init__.py  __main__.py  args.py  discovery.py  invoker.py  safety.py  server.py
adapters/introspect-mcp/tests/: conftest.py  test_args.py  test_discovery.py  test_invoker.py  test_safety.py  test_server.py
adapters/korg-ledger-py/: README.md  pyproject.toml
adapters/korg-ledger-py/src/korg_ledger/: __init__.py  _events.py  _hash.py  _hlc.py  goldseal.py  korgcert.py  signing.py  writer.py
adapters/korg-ledger-py/tests/: test_anchors.py  test_conformance.py  test_events.py  test_goldseal.py  test_goldseal_properties.py  test_hlc.py  test_korgcert.py  test_korgcert_properties.py  test_properties.py  test_signing.py  test_writer.py
adapters/korg-seal/: README.md  pyproject.toml
adapters/korg-seal/src/korg_seal/: __init__.py  __main__.py  cli.py  keys.py  minter.py  resolve.py
adapters/korg-seal/tests/: test_korg_seal.py
adapters/korg-setup/: README.md  pyproject.toml
adapters/korg-setup/src/korg_setup/: __init__.py  __main__.py  claude_config.py  claude_settings.py  discovery.py  launchd.py  setup.py  status.py
adapters/korg-setup/tests/: test_bridge_registration.py  test_claude_config.py  test_claude_settings.py  test_discovery.py  test_launchd.py  test_setup.py  test_status.py
adapters/recall-mcp/: README.md  pyproject.toml
adapters/recall-mcp/src/korg_recall_mcp/: __init__.py  __main__.py  index.py  introspect.py  search.py  server.py  text.py
adapters/recall-mcp/tests/: test_index.py  test_introspect.py  test_search.py  test_server.py  test_text.py
crates/korg-auth/: Cargo.toml  README.md
crates/korg-auth/src/: lib.rs  providers.rs  store.rs
crates/korg-bridge/: Cargo.toml  README.md  pyproject.toml
crates/korg-bridge/src/: lib.rs
crates/korg-bridge/tests/: test_bridge.py  test_bridge_chain.py
crates/korg-core/: Cargo.toml  PUBLIC_API.md  README.md
crates/korg-core/src/: adapter.rs  event.rs  lib.rs  metrics.rs  paths.rs  subscription.rs  telemetry.rs
crates/korg-embeddings/: Cargo.toml  README.md
crates/korg-ledger/: Cargo.toml
crates/korg-ledger/src/: lib.rs
crates/korg-llm/: Cargo.toml  README.md
crates/korg-llm/src/: deterministic.rs  lib.rs
crates/korg-registry/: Cargo.toml  README.md
crates/korg-registry/src/: checkpoint.rs  executor.rs  ledger_chain.rs  lib.rs  log.rs  plan.rs  planner.rs  projection.rs  types.rs  validator.rs
crates/korg-registry/tests/: conformance.rs
crates/korg-runtime/: Cargo.toml  README.md
crates/korg-runtime/src/: acp.rs  agent.rs  arena.rs  blackboard.rs  campaign.rs  code_indexer.rs  dag.rs  evaluator.rs  harness.rs  identity.rs  leader.rs  lib.rs  observation.rs  parallel.rs  permissions.rs  personas.rs  provenance.rs  recovery.rs  run_once.rs  runtime.rs  session.rs  skills.rs  tools.rs  tui_bridge.rs  vision_policy.rs  workers.rs  workspace.rs
crates/korg-runtime/src/execution/: dag.rs  events.rs  mod.rs  pool.rs  recovery.rs  warm_boot.rs
crates/korg-runtime/tests/: honest_pipeline.rs  live_ollama.rs  run_once.rs
crates/korg-server/: Cargo.toml  README.md
crates/korg-server/assets/: hero-mesh.glb
crates/korg-server/src/: lib.rs
crates/korg-tui/: Cargo.toml  README.md
crates/korg-tui/src/: lib.rs
crates/korg-verify/: Cargo.toml  README.md
crates/korg-verify/src/: chain.rs  lib.rs  main.rs
crates/korg-verify/tests/: conformance.rs  event_sig.rs  fuzz.rs  goldseal.rs  korgcert.rs  receipt.rs
crates/korg-verify/tests/conformance/: nonbmp-intact.jsonl
crates/korg-verify/tests/fixtures/: goldseal-v1.json  journal.json  korgcert-v1.json  signed-events.pubkey  signed-receipt.json
docs/: GIT_ISOLATION.md
examples/: claude_code_session_ledger.json
packaging/: korg.rb
scratch/: record_cockpit.js  sexy_docs_generator.py  sync_notebooklm.sh  sync_notebooklm_py.py
src/: acp.rs  agent.rs  arena.rs  blackboard.rs  campaign.rs  code_indexer.rs  code_intel.rs  dag.rs  embeddings.rs  evaluator.rs  harness.rs  introspect.rs  leader.rs  llm.rs  main.rs  metrics.rs  paths.rs  personas.rs  provenance.rs  runtime.rs  session.rs  skills.rs  telemetry.rs  tools.rs  tui.rs  vision_policy.rs  web.rs  workers.rs  workspace.rs
tests/: campaign_e2e.rs
(+197 files in other folders)
