[package]
name = "grok-acp-harness"
version = "0.1.0"
edition = "2021"
description = "Minimal reference implementation of an ACP-speaking harness for Grok 4.20 Heavy / Korg (Rust skeleton)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/grok-acp-harness"

[dependencies]
mimalloc = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
# JCS (RFC 8785) - using a compatible crate. Full canonicalization can be swapped in.
canonical_json = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Optional real embedding backend (Heavy-Tier semantic_entropy)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.19", optional = true }
hf-hub = { version = "0.3", optional = true, features = ["tokio"] }

# Ratatui TUI for the live operator dashboard (production feature)
ratatui = "0.24"
crossterm = { version = "0.27", features = ["event-stream"] }

[features]
default = ["candle"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub"
]

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "korg"
path = "src/main.rs"
