[package]
name = "korg"
version = "0.1.0"
edition = "2021"
description = "The first deterministic cognitive runtime. Every AI agent decision is logged, causally ordered, and reversible — like Git, but for cognition."
license = "MIT OR Apache-2.0"
repository = "https://github.com/New1Direction/korg"
homepage = "https://github.com/New1Direction/korg"
documentation = "https://github.com/New1Direction/korg#readme"
keywords = ["ai", "agents", "runtime", "deterministic", "autonomous"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
readme = "README.md"
exclude = [
    # Private knowledge base / research
    "wiki/**",
    "sources/**",
    "Human/**",
    "Prompts/**",
    "Decisions/**",
    "Architecture/**",
    # Dev scratch and runtime state
    "scratch/**",
    ".korg/**",
    ".obsidian/**",
    # Frontend / desktop shell (not in OSS release)
    "frontend/**",
    "src-tauri/**",
    "node_modules/**",
    # Internal docs
    "ANNOUNCEMENT.md",
    "DOCS.md",
    "PRODUCT_OVERVIEW.md",
    "INSTALLATION_GUIDE.md",
    "RELEASE_NOTES.md",
    "USER_GUIDE.md",
    "POLICY.md",
    "Index.md",
    "_GROK.md",
    "Korg - Queries.md",
    # Build artifacts
    "Dockerfile",
    "deploy.sh",
    "build_wasm.sh",
    "package.json",
    "package-lock.json",
    "*.py",
    # Internal planning / dev docs
    "implementation_plan.md",
    "log.md",
    "llms.txt",
    "korg.toml",
    "packaging/**",
    "raw/**",
]

[dependencies]
mimalloc = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
# JCS (RFC 8785) - using a compatible crate. Full canonicalization can be swapped in.
canonical_json = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
toml = "0.8"
directories = "5.0"
base64 = "0.22"
shell-words = "1.1"
lru = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
futures = "0.3"
fs2 = "0.4"
libc = "0.2"


# Optional real embedding backend (Heavy-Tier semantic_entropy)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.19", optional = true }
hf-hub = { version = "0.3", optional = true, features = ["tokio"] }

# Ratatui TUI for the live operator dashboard (production feature)
ratatui = "0.24"
crossterm = { version = "0.27", features = ["event-stream"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Axum Web Server & SSE (production feature for public cockpit)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"

[features]
default = ["candle"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub"
]

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "korg"
path = "src/main.rs"
