[workspace]
members = [
    ".",
    "crates/korg-core",
    "crates/korg-auth",
    "crates/korg-llm",
    "crates/korg-embeddings",
    "crates/korg-registry",
    "crates/korg-runtime",
    "crates/korg-tui",
    "crates/korg-server",
    "crates/korg-bridge",
    "crates/korg-verify",
]
resolver = "2"

# Shared version pins — workspace members reference these with `{ workspace = true }`.
# Cargo features are always additive: enabling a feature adds functionality, never removes it.
[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["v4", "v7", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
reqwest    = { version = "0.12", features = ["json", "stream"] }
axum       = { version = "0.7", features = ["macros"] }

[package]
name = "korg"
version = "0.1.0"
edition = "2021"
description = "The first deterministic cognitive runtime. Every AI agent decision is logged, causally ordered, and reversible — like Git, but for cognition."
license = "MIT OR Apache-2.0"
repository = "https://github.com/New1Direction/korg"
homepage = "https://github.com/New1Direction/korg"
documentation = "https://github.com/New1Direction/korg#readme"
keywords = ["ai", "agents", "runtime", "deterministic", "autonomous"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
readme = "README.md"
exclude = [
    # Private knowledge base / research
    "wiki/**",
    "sources/**",
    "Human/**",
    "Prompts/**",
    "Decisions/**",
    "Architecture/**",
    # Dev scratch and runtime state
    "scratch/**",
    ".korg/**",
    ".obsidian/**",
    # Frontend / desktop shell (not in OSS release)
    "frontend/**",
    "src-tauri/**",
    "node_modules/**",
    # Internal docs
    "ANNOUNCEMENT.md",
    "DOCS.md",
    "PRODUCT_OVERVIEW.md",
    "INSTALLATION_GUIDE.md",
    "RELEASE_NOTES.md",
    "USER_GUIDE.md",
    "POLICY.md",
    "Index.md",
    "_GROK.md",
    "Korg - Queries.md",
    # Build artifacts
    "Dockerfile",
    "deploy.sh",
    "build_wasm.sh",
    "package.json",
    "package-lock.json",
    "*.py",
    # Internal planning / dev docs
    "implementation_plan.md",
    "log.md",
    "llms.txt",
    "korg.toml",
    "packaging/**",
    "raw/**",
]

[dependencies]
korg-core       = { path = "crates/korg-core" }
korg-auth       = { path = "crates/korg-auth" }
korg-registry   = { path = "crates/korg-registry" }
korg-llm        = { path = "crates/korg-llm" }
korg-embeddings = { path = "crates/korg-embeddings" }
korg-runtime    = { path = "crates/korg-runtime" }
korg-tui        = { path = "crates/korg-tui" }
korg-server     = { path = "crates/korg-server" }
mimalloc = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
# JCS (RFC 8785) - using a compatible crate. Full canonicalization can be swapped in.
canonical_json = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
toml = "0.8"
directories = "5.0"
base64 = "0.22"
shell-words = "1.1"
lru = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
futures = "0.3"
fs2 = "0.4"
libc = "0.2"
oauth2 = "4.4"
aes-gcm = "0.10"
pbkdf2 = "0.12"


# Ratatui TUI for the live operator dashboard (production feature)
ratatui = "0.24"
crossterm = { version = "0.27", features = ["event-stream"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Axum Web Server & SSE (production feature for public cockpit)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"

[features]
default = ["candle"]
candle = ["korg-embeddings/candle"]

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "korg"
path = "src/main.rs"
