[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "claude-code-adapter"
version         = "0.2.0"
description     = "Translate Claude Code session JSONL files into korg AgentToolCall events (one-shot replay or live --tail)"
license         = { text = "MIT" }
requires-python = ">=3.9"
authors         = [{ name = "Korg ecosystem maintainers" }]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# korg-ledger-py is the verifiable-ledger writer the hook/canonical-emit path
# depends on. In dev it is installed from the sibling path
# (`pip install -e adapters/korg-ledger-py`); it resolves from PyPI once published.
dependencies    = ["korg-ledger-py"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[project.scripts]
korg-ingest-claude = "claude_code_adapter.__main__:main"
korg-hook          = "claude_code_adapter.hook:main"

[tool.setuptools.packages.find]
where   = ["src"]
include = ["claude_code_adapter*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
