[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korg-ledger-py"
version = "0.1.0"
description = "Pure-Python conformant producer + verifier for the korg-ledger@v1 tamper-evident ledger format."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "hypothesis>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/korg_ledger"]
