[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "korg-setup"
version         = "0.1.0"
description     = "One-command setup for the korg ecosystem: registers the MCP recall server with Claude Code and installs the live-tail capture as a background service."
license         = { text = "MIT" }
requires-python = ">=3.9"
authors         = [{ name = "Korg ecosystem maintainers" }]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Intentional: we don't pull the adapter packages as Python deps because
# they're meant to be installed alongside via pipx/pip. korg-setup just
# orchestrates whatever's already on PATH. This keeps the dep tree clean
# and avoids forcing the heavy fastembed wheel on users who only want the
# capture side.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[project.scripts]
korg-setup = "korg_setup.__main__:main"

[tool.setuptools.packages.find]
where   = ["src"]
include = ["korg_setup*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
