[package]
name = "korg-ledger"
version = "0.1.0"
edition = "2021"
description = "korg-ledger@v1 — the tamper-evident hash-chain spec implementation (canonicalize, chain_hash, verify_chain, verify_dag). Byte-identical to the Python and JS references; SHA-256 or HMAC-keyed."
license = "MIT OR Apache-2.0"
repository = "https://github.com/New1Direction/korg"
homepage = "https://github.com/New1Direction/korg"
keywords = ["ledger", "hash-chain", "tamper-evident", "audit", "verification"]
categories = ["cryptography", "data-structures"]
readme = false

[dependencies]
serde_json = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2", optional = true }
hex = { version = "0.4", optional = true }

[features]
# Opt-in Ed25519 per-event signing/verification. Keeps the core crate
# dependency-light (hash-chain only) for downstream consumers who don't sign.
signing = ["dep:ed25519-dalek", "dep:hex"]

[dev-dependencies]
proptest = "1"
