[package]
name = "korg-llm"
version = "0.1.0"
edition = "2021"
description = "LLM routing and prompt machinery for korg (Claude, OpenAI, Grok)"
license = "MIT OR Apache-2.0"

[dependencies]
korg-core    = { path = "../korg-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
async-trait  = "0.1"
bytes        = "1"
futures-util = "0.3"
fs2          = "0.4"
sha2         = "0.10"
hex          = "0.4"
toml         = "0.8"
directories  = "5.0"

[dev-dependencies]
tokio-test   = "0.4"
