[package]
name = "korg-runtime"
version = "0.1.0"
edition = "2021"
description = "Orchestration engine: leader, workers, DAG, personas, blackboard, ACP"
license = "MIT OR Apache-2.0"

[dependencies]
korg-core       = { path = "../korg-core" }
korg-auth       = { path = "../korg-auth" }
korg-llm        = { path = "../korg-llm" }
korg-embeddings = { path = "../korg-embeddings" }
korg-registry   = { path = "../korg-registry" }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
tracing         = { workspace = true }
async-trait     = "0.1"
sha2            = "0.10"
hex             = "0.4"
ed25519-dalek   = { version = "2", features = ["rand_core"] }
rand            = "0.8"
tokio-util      = { version = "0.7", features = ["rt"] }
lru             = "0.12"
shell-words     = "1.1"
base64          = "0.22"
fs2             = "0.4"
libc            = "0.2"
futures         = "0.3"
canonical_json  = "0.1"
tree-sitter         = "0.26.9"
tree-sitter-rust    = "0.24.2"
tree-sitter-python  = "0.25.0"

[dev-dependencies]
tokio-test = "0.4"
