[package]
name = "korg-verify"
version = "0.1.0"
edition = "2021"
description = "Independent, dependency-light verifier for korg receipts and journals (hash chain + causal DAG + Ed25519 tip signature). No network, no Python."
license = "MIT OR Apache-2.0"
repository = "https://github.com/New1Direction/korg"

[lib]
name = "korg_verify"
path = "src/lib.rs"

[[bin]]
name = "korg-verify"
path = "src/main.rs"

[dependencies]
korg-registry = { path = "../korg-registry" }
serde_json = { workspace = true }
ed25519-dalek = "2"
hex = "0.4"

[dev-dependencies]
serde_json = { workspace = true }
