[package]
name = "korg-verify"
version = "0.1.1"
edition = "2021"
description = "Independent, dependency-light verifier for korg receipts and journals (hash chain + causal DAG + Ed25519 tip signature). No network, no Python."
license = "MIT OR Apache-2.0"
repository = "https://github.com/New1Direction/korg"
homepage = "https://github.com/New1Direction/korg/tree/main/crates/korg-verify"
documentation = "https://docs.rs/korg-verify"
readme = "README.md"
keywords = ["verification", "tamper-evident", "hash-chain", "audit", "provenance"]
categories = ["command-line-utilities", "cryptography", "development-tools"]

[lib]
name = "korg_verify"
path = "src/lib.rs"

[[bin]]
name = "korg-verify"
path = "src/main.rs"

[dependencies]
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = "2"
hex = "0.4"
